--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ defusedxml==0.6.0
 docutils==0.15.2
 entrypoints==0.3
 emoji==1.6.3
+easyocr==1.5.0
 enum-compat==0.0.3
 idna==2.9
 ipykernel==5.3.0
