--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,9 @@ decorator==4.4.2
 defusedxml==0.6.0
 docutils==0.15.2
 entrypoints==0.3
+easyocr==1.5.0
 enum-compat==0.0.3
+fer==22.4.0
 idna==2.9
 ipykernel==5.3.0
 ipython==7.15.0
